# SafeErase

./: CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  RUNNING_DEMOS_SUMMARY.md  SAFEERASE_RUNNING_STATUS.md  demo_cli_tools.py  python-README.md  run_python_demo_standalone.py  run_safeerase.py  safeerase.bat  setup.py
certificate-gen/: Cargo.toml
certificate-gen/src/: certificate.rs  crypto.rs  error.rs  lib.rs
core-engine/: Cargo.toml
core-engine/src/: algorithms.rs  device.rs  error.rs  lib.rs  verification.rs  wipe.rs
core-engine/src/platform/: linux.rs  mod.rs
demo/: README.md  run_demo.bat  run_demo.py  web_demo.html
docs/: technical-specs.md  user-manual.md
python-api/: safeerase_api.py
python-examples/: basic_usage.py  run_python_demo.py
python-tools/: certificate_validator.py  device_scanner.py  wipe_scheduler.py
python-ui/: main.py  requirements.txt
python-ui/core/: app_controller.py  device_manager.py
python-ui/ui/: device_panel.py  main_window.py
python-ui/utils/: logger.py  platform_utils.py
scripts/: build.sh  test.sh
ui-flutter/: pubspec.yaml
ui-flutter/lib/: main.dart
ui-flutter/lib/core/routing/: app_router.dart
ui-flutter/lib/core/services/: safe_erase_service.dart
ui-flutter/lib/core/theme/: app_theme.dart
ui-flutter/lib/core/utils/: platform_utils.dart
ui-flutter/lib/core/widgets/: app_scaffold.dart  error_page.dart  status_card.dart
ui-flutter/lib/features/about/presentation/pages/: about_page.dart
ui-flutter/lib/features/certificate/presentation/pages/: certificate_page.dart
ui-flutter/lib/features/device_selection/presentation/pages/: device_selection_page.dart
ui-flutter/lib/features/home/presentation/pages/: home_page.dart
ui-flutter/lib/features/home/presentation/providers/: home_providers.dart
ui-flutter/lib/features/settings/presentation/pages/: settings_page.dart
ui-flutter/lib/features/wipe_configuration/presentation/pages/: wipe_configuration_page.dart
ui-flutter/lib/features/wipe_progress/presentation/pages/: wipe_progress_page.dart
