[workspace]
members = [
    "core-engine",
    "certificate-gen",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
openssl = "0.10"
ring = "0.17"
sha2 = "0.10"
hex = "0.4"

# System interaction
libc = "0.2"
nix = "0.27"
winapi = { version = "0.3", features = ["winnt", "handleapi", "fileapi", "ioapiset"] }

# Certificate generation
pdf-writer = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing
mockall = "0.12"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
