[package]
name = "safe-erase-certificates"
version = "0.1.0"
edition = "2021"
authors = ["SafeErase Team"]
description = "Tamper-proof certificate generation for SafeErase"
license = "MIT"
repository = "https://github.com/safeerase/SafeErase"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
openssl = { workspace = true }
ring = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
pdf-writer = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Additional certificate dependencies
base64 = "0.22"
jsonwebtoken = "9.2"
qrcode = "0.14"
image = "0.24"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["pdf-generation", "qr-codes"]
pdf-generation = []
qr-codes = []
